added description of talk

--- a/_talks/2013-03-01-talk-1.md
+++ b/_talks/2013-03-01-talk-1.md
@@ -1,12 +1,14 @@
 ---
-title: "Northwestern Qualifying Exam Presentation"
+title: "Animal-Robot Interaction Task to Examine Spatial Planning as it Occurs in Nature"
 collection: talks
 type: "Presentation"
 permalink: 
-venue: "Northwestern Qualifying Exam Presentation"
+venue: "Northwestern"
 date: 2023-03-02
 location: "Evanston IL, USA"
 ---
+
+A presentation focusing on the development of an animal-robot interaction task, with a particular emphasis on the robot design and control.
 
 ## Video 
 <div style="text-align:center; transform: scale(1.0);margin-bottom: 40px;">
