added youtube link

--- a/_talks/2013-03-01-talk-1.md
+++ b/_talks/2013-03-01-talk-1.md
@@ -12,7 +12,7 @@ A presentation focusing on the development of an animal-robot interaction task, 
 
 ## Video 
 <div style="text-align:center; transform: scale(1.0);margin-bottom: 40px;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/PpGYyq2HbUY?si=9uVg2e-_saBEMzkW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://youtu.be/c25X3IIH1Pk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 
