--- a/_talks/2013-03-01-talk-1.md
+++ b/_talks/2013-03-01-talk-1.md
@@ -11,8 +11,9 @@ location: "Evanston IL, USA"
 A presentation focusing on the development of an animal-robot interaction task, with a particular emphasis on the robot design and control.
 
 ## Video 
-<iframe width="840" height="472" src="https://youtu.be/c25X3IIH1Pk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/c25X3IIH1Pk" frameborder="0" allowfullscreen></iframe>
 
 
 ## Animal-Robot Interaction Task to Examine Spatial Planning as it Occurs in Nature
