added NDSEG conference file

--- a/_talks/2013-03-01-talk-1.md
+++ b/_talks/2013-03-01-talk-1.md
@@ -1,7 +1,7 @@
 ---
 title: "Animal-Robot Interaction Task to Examine Spatial Planning as it Occurs in Nature"
 collection: talks
-type: "Presentation"
+type: "Qualification Exam"
 permalink: 
 venue: "Northwestern"
 date: 2023-03-02
